refactor(hold): holdService interface 제거