@@ -24,31 +24,28 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 class HoldServiceV1Test {
 
-        @InjectMocks
-        private HoldServiceV1 holdService;
-        @Mock
-        private MemberFinder memberFinder;
-        @Mock
-        private PerformanceFinder performanceFinder;
-        @Mock
-        private PerformanceSeatFinder performanceSeatFinder;
+    @InjectMocks
+    private HoldServiceV1 holdService;
+    @Mock
+    private MemberFinder memberFinder;
+    @Mock
+    private PerformanceFinder performanceFinder;
+    @Mock
+    private PerformanceSeatFinder performanceSeatFinder;
 
-        @Test
-        void 선점_요청한_좌석_중_하나라도_불가능하면_전체가_실패한다() {
-                // given
-                final Member member = TestDataFactory.createMember();
-                final Performance performance = TestDataFactory.createPerformance();
-                final List<PerformanceSeat> availableSeats = TestDataFactory.createAvailableSeats(performance.getId(), List.of(1L, 2L));
-                NewSeatHold newSeatHold = new NewSeatHold(member.getId(), performance.getId(),
-                                availableSeats.stream().map(PerformanceSeat::getSeatId).toList());
-                when(memberFinder.find(member.getId())).thenReturn(member);
-                when(performanceFinder.findOpenPerformance(performance.getId())).thenReturn(performance);
-                when(performanceSeatFinder.findAvailablePerformanceSeats(
-                                availableSeats.stream().map(PerformanceSeat::getSeatId).toList(),
-                                performance.getId()))
-                                .thenReturn(Collections.emptyList());
-                // then
-                assertThatThrownBy(() -> holdService.hold(newSeatHold))
-                                .isInstanceOf(CoreException.class);
-        }
+    @Test
+    void 선점_요청한_좌석_중_하나라도_불가능하면_전체가_실패한다() {
+        // given
+        final Member member = TestDataFactory.createMember();
+        final Performance performance = TestDataFactory.createPerformance();
+        final List<PerformanceSeat> availableSeats = TestDataFactory.createAvailableSeats(performance.getId(), List.of(1L, 2L));
+        final List<Long> seatIds = availableSeats.stream().map(PerformanceSeat::getSeatId).toList();
+        when(memberFinder.find(member.getId())).thenReturn(member);
+        when(performanceFinder.findOpenPerformance(performance.getId())).thenReturn(performance);
+        when(performanceSeatFinder.findAvailablePerformanceSeats(seatIds, performance.getId())).thenReturn(Collections.emptyList());
+        NewSeatHold newSeatHold = new NewSeatHold(member.getId(), performance.getId(), seatIds);
+        // when & then
+        assertThatThrownBy(() -> holdService.hold(newSeatHold))
+                .isInstanceOf(CoreException.class);
+    }
 }
